--- a/index.html
+++ b/index.html
@@ -254,21 +254,21 @@
         <a>Generated 3D obj from single image-to-3D method</a>
     </p>
     <div class="level">
-      <div class="level-item">
+      <div class="level-item" style="display: flex; flex-direction: column; align-items: center;">
         <model-viewer id="pig" src= "./static/animations/goat0_bp.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
       <p style="margin-top: 0.5rem; font-size: 0.95rem; color: #666;"> walk </p>
       </div>
       
-      <div class="level-item">
+      <div class="level-item" style="display: flex; flex-direction: column; align-items: center;">
         <model-viewer id="id3" src="./static/animations/bear2_gp.glb" style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
       <p style="margin-top: 0.5rem; font-size: 0.95rem; color: #666;"> walk </p>
       </div>
       
-      <div class="level-item">
+      <div class="level-item" style="display: flex; flex-direction: column; align-items: center;">
         <model-viewer id="id4" src="./static/animations/lamb28_pp.glb"   style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
       <p style="margin-top: 0.5rem; font-size: 0.95rem; color: #666;"> walk </p>
       </div>
-       <div class="level-item">
+       <div class="level-item" style="display: flex; flex-direction: column; align-items: center;">
         <model-viewer id="id4" src="./static/animations/sheep11_gp.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
       <p style="margin-top: 0.5rem; font-size: 0.95rem; color: #666;"> walk </p>
       </div>
