--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           <p > jump </p>
         </div>
       </div>
-      
+    </div>
      <div class="level">
       </div>
       <div class="level-item">
