--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         <a> Meshes extraction from images. </a>
   </p>
     <div class="level">
-      <div class="level-item" style="text-align: center; margin-left: -30px;">
+      <div class="level-item" style="text-align: center; margin-left: -50px;">
         <!-- <div class="card-wrapper"> -->
           <div style="width: 200px;">
           <model-viewer id="pig" src="./static/animations/animal3d/225264_zebra_drink_op.glb"  style="width: 135%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-60deg 90deg auto"></model-viewer>
@@ -402,15 +402,17 @@
           <p > walk </p>
         </div>
       </div>
-      <div class="level-item">
-        <div class="card-wrapper">
+      <div class="level-item" style="text-align: center; margin-left: -70px;">
+        <!-- <div class="card-wrapper"> -->
+          <div style="width: 200px;">
           <model-viewer id="id4" src="./static/animations/animal3d/4541_death_cg.glb"  style="width: 140%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
           <p > death </p>
         </div>
       </div>
 
-      <div class="level-item">
-        <div class="card-wrapper">
+      <div class="level-item" style="text-align: center; margin-left: -30px;">
+        <!-- <div class="card-wrapper"> -->
+          <div style="width: 200px;">
           <model-viewer id="pig" src="./static/animations/animal3d/433994_horse_death_bp.glb"  style="width: 130%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
           <p > death </p>
         </div>
@@ -421,15 +423,16 @@
 
     <div class="level">
      
-      <div class="level-item" style="text-align: center; margin-left: -50px;">
+      <div class="level-item" style="text-align: center; margin-left: -40px;">
         <!-- <div class="card-wrapper"> -->
           <div style="width: 200px;">
           <model-viewer id="id4" src="./static/animations/animal3d/219261_horse_hit_front_pp.glb"  style="width: 120%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
           <p > hit front </p>
         </div>
       </div>
-       <div class="level-item">
-        <div class="card-wrapper">
+      <div class="level-item" style="text-align: center; margin-left: -60px;">
+        <!-- <div class="card-wrapper"> -->
+          <div style="width: 200px;">
           <model-viewer id="id4" src="./static/animations/animal3d/n02102040_jump_cg.glb"  style="width: 140%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
           <p > jump </p>
         </div>
