--- a/index.html
+++ b/index.html
@@ -364,13 +364,13 @@
       <div class="level-item" >
         <div class="card-wrapper">
           <!-- <div style="width: 200px;"> -->
-          <model-viewer id="pig" src="./static/animations/animal3d/225264_zebra_drink_op.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-60deg 90deg auto"></model-viewer>
+          <model-viewer id="pig" src="./static/animations/animal3d/225264_zebra_drink_op.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-60deg 90deg 1m"></model-viewer>
           <p > drink </p>
         </div>
       </div>
       <div class="level-item">
         <div class="card-wrapper">
-          <model-viewer id="horse" src="./static/animations/animal3d/25974_zebra_drink_bp.glb"     style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-50deg 90deg auto"></model-viewer>
+          <model-viewer id="horse" src="./static/animations/animal3d/25974_zebra_drink_bp.glb"     style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-50deg 90deg 0.8m"></model-viewer>
           <p > drink </p>
         </div>
       </div>
@@ -405,7 +405,7 @@
       <div class="level-item" >
         <div class="card-wrapper">
           <!-- <div style="width: 200px;"> -->
-          <model-viewer id="id4" src="./static/animations/animal3d/4541_death_cg.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
+          <model-viewer id="id4" src="./static/animations/animal3d/4541_death_cg.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg 0.6m" ></model-viewer>
           <p > death </p>
         </div>
       </div>
@@ -413,7 +413,7 @@
       <div class="level-item" >
         <div class="card-wrapper">
           <!-- <div style="width: 200px;"> -->
-          <model-viewer id="pig" src="./static/animations/animal3d/433994_horse_death_bp.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
+          <model-viewer id="pig" src="./static/animations/animal3d/433994_horse_death_bp.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg 0.8m"></model-viewer>
           <p > death </p>
         </div>
       </div>
@@ -433,7 +433,7 @@
       <div class="level-item">
         <div class="card-wrapper">
           <!-- <div style="width: 200px;"> -->
-          <model-viewer id="id4" src="./static/animations/animal3d/n02102040_jump_cg.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto" ></model-viewer>
+          <model-viewer id="id4" src="./static/animations/animal3d/n02102040_jump_cg.glb"  style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg 0.8m" ></model-viewer>
           <p > jump </p>
         </div>
       </div>
@@ -445,7 +445,7 @@
       </div>
       <div class="level-item">
         <div class="card-wrapper">
-          <model-viewer id="horse" src="./static/animations/animal3d/430788_horse_lie_pp.glb"     style="width: 120%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
+          <model-viewer id="horse" src="./static/animations/animal3d/430788_horse_lie_pp.glb"     style="width: 100%; height: 270px;" autoplay shadow-intensity="1" camera-controls touch-action="none" camera-orbit="-90deg 90deg auto"></model-viewer>
           <p > lie </p>
         </div>
       </div>
